--- a/notes/notes_topics/notes_pages/composites_materials_notes.html
+++ b/notes/notes_topics/notes_pages/composites_materials_notes.html
@@ -139,6 +139,7 @@
                             <ul>
                                 <li>Good strength to weight ratio</li>
                                 <li>Good tensile strength</li>
+                                <li>Can be repaired easily (patch kits etc)</li>
                                 <li>Corrosion resistant</li>
                                 <li>Durable</li>
                             </ul>
