--- a/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
+++ b/notes/notes_topics/notes_pages/modern_manufacturing_methods_notes.html
@@ -466,7 +466,8 @@
                             <li>Reduces retooling cost</li>
                             <li>Increased market share</li>
                             <li>Improved cash flow</li>
-                            <li>Storage costs reduced</li>
+                            <li>Storage costs reduced through JIT</li>
+                            <li>Reduced overheads</li>
                             <li>Highly automated - reduced labour costs</li>
                             <li>Reduced human error - less waste</li>
                             <li>Allows flexibility</li>
