--- a/notes/notes_topics/notes_pages/moulding_notes.html
+++ b/notes/notes_topics/notes_pages/moulding_notes.html
@@ -208,6 +208,8 @@
                                 <li>Moulds need to be accurate to avoid webbing</li>
                                 <li>Large amounts of waste materials produced - bad for environment</li>
                                 <li>Can only mould thin products which are weak/prone to cracking</li>
+                                <li>Can only form open backed shapes</li>
+                                <li>Cannot mould complex shapes</li>
                             </ul>
                         </td>
                     </tr>
