--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -84,12 +84,12 @@
             </div>
 
             <div class="notes-content">
-
+q
                 <div class="notes-content-intro">
                     <h2>The following page of notes will cover:</h2>
                     <ul style="font-size: medium;">
                         <li>Physical characteristics (Physical properties)</li>
-                        <li>Mechanical characteristics (Mechanical properties)</li>
+                        <li>Mechanical characteristics (Mechanical properties / Working properties)</li>
                     </ul>
                 </div>
 
@@ -124,7 +124,7 @@
                 
 
                 <div class="notes-content-subheader">
-                    <h2 id="Mechanicalproperties"><hr>Mechanical characteristics<hr></h2>
+                    <h2 id="Mechanicalproperties"><hr>Mechanical (Working) characteristics<hr></h2>
                 </div>
 
                 <h3 id="Strength"><b><u>Strength (Tensile, Compressive, Torsional, Shear, Bending):</b></u></h3>
