--- a/coursework/coursework.html
+++ b/coursework/coursework.html
@@ -142,14 +142,14 @@
             </div>
         </div>
 
-                <div class="footer">
-                    <div class="footer-content">
-                       <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
-                    </div>
-                    <div class="footer-bottom">
-                        &copy; DTBase.com | Designed by Henry Chen and Will Stevens
-                    </div>
-                </div>
+        <div class="footer">
+            <div class="footer-content">
+               <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
+            </div>
+            <div class="footer-bottom">
+                | &copy; DTBase.com | Designed by Henry Chen and Will Stevens | <br><br>| <div class="tutor_btn"><a href="..\legal_notice.html">Legal Notice</a> | </div>
+            </div>
+        </div>
 
     </div>
 </body>
