--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
             </div>
         </div>
 
-    <div class="footer">
-        <div class="footer-content">
-           <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
+        <div class="footer">
+            <div class="footer-content">
+               <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
+            </div>
+            <div class="footer-bottom">
+                | &copy; DTBase.com | Designed by Henry Chen and Will Stevens | <br><br>| <div class="tutor_btn"><a href="legal_notice.html">Legal Notice & Privacy Policy</a> | </div>
+            </div>
         </div>
-        <div class="footer-bottom">
-            | &copy; DTBase.com | Designed by Henry Chen and Will Stevens | <br><br>| <div class="tutor_btn"><a href="legal_notice.html">Legal Notice</a> | </div>
-        </div>
-    </div>
 
 
     </div>
