--- a/notes/notes_topics/notes_pages/wider_issues_tech_notes.html
+++ b/notes/notes_topics/notes_pages/wider_issues_tech_notes.html
@@ -133,7 +133,7 @@
                <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
             </div>
             <div class="footer-bottom">
-                &copy; DTBase.com | Designed by Henry Chen and Will Stevens
+                | &copy; DTBase.com | Designed by Henry Chen and Will Stevens | <br><br>| <div class="tutor_btn"><a href="../../../legal_notice.html">Legal Notice & Privacy Policy</a> | </div>
             </div>
         </div>
 
