index try again

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193"
         crossorigin="anonymous">
     </script>
+    <!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/bf66d40c1470575f392ed5d8/script.js"></script> <!-- End cookieyes banner -->
 </head>
 
 
