--- a/index.html
+++ b/index.html
@@ -14,22 +14,25 @@
     <link rel="shortcut icon" type="image/x-icon" href="Favicon.png">
     <link rel="stylesheet" href="styles.css"/>
 
-    <!-- Google tag (gtag.js) -->
+    <!-- Start CookieYes Banner -->
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/bf66d40c1470575f392ed5d8/script.js"></script>
+    <!-- End CookieYes Banner -->
+
+    <!-- Google Analytics (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZG2YDGNFN"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'G-YZG2YDGNFN');
-    gtag('config', 'AW-11234376367');
+        gtag('config', 'G-YZG2YDGNFN');
+        gtag('config', 'AW-11234376367');
     </script>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193"
-        crossorigin="anonymous">
-    </script>
-    <!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/bf66d40c1470575f392ed5d8/script.js"></script> <!-- End cookieyes banner -->
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193" crossorigin="anonymous"></script>
 </head>
+
 
 
 <body>
