--- a/contact.html
+++ b/contact.html
@@ -1,36 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>
-        DTBASE. Design and Technology - contact us. Revise and learn GCSE/A-Level content for DT. Find high quality 
-        notes, past paper questions, solutions, coursework examples and much more!
-    </title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get in touch with the team at Designandtechbase for any 
-    questions or concerns about our revision materials, exercises and coursework, or tutoring services. 
-    Contact us today for a prompt response">
-
-
-    <link rel="shortcut icon" type="image/x-icon" href="Favicon.png">
-    <link rel="stylesheet" href="styles.css"/>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZG2YDGNFN"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-YZG2YDGNFN');
-    gtag('config', 'AW-11234376367');
-    </script>
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193"
-        crossorigin="anonymous">
-    </script>
-</head>
+    <head>
+        <script src="/head.js" defer></script>
+    </head>
 
 
 <body>
