head.js implemented

--- a/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
+++ b/exercises/exercise_topics/InformationHandlingModellingAndForwardPlanning.html
@@ -1,35 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>
-        DTBASE | Design and Technology Revision - Information Handling Modelling and Forward Planning. 
-    </title>
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Note Topic: Information Handling Modelling and Forward Planning.
-    Revise and learn GCSE/A-Level material for DT. Find high quality notes, past paper questions, 
-    solutions, coursework examples and much more!">
-
-    <link rel="shortcut icon" type="image/x-icon" href="../../Favicon.png">
-    <link rel="stylesheet" href="../../styles.css"/>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZG2YDGNFN"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-YZG2YDGNFN');
-    gtag('config', 'AW-11234376367');
-    </script>
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193"
-        crossorigin="anonymous">
-    </script>
-</head>
+    <head>
+        <script src="/head.js" defer></script>
+    </head>
 
 <body>
     <div class="containter">  
