--- a/pastpapers/papers_level/pastpapers_alevel.html
+++ b/pastpapers/papers_level/pastpapers_alevel.html
@@ -1,61 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>
-        DTBASE | Design and Technology Revision - pastpaper. 
-    </title>
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Real past papers from previous exam boards to help you revise for your exams. The three main exam boards are on this page as shown below">
-
-    <link rel="shortcut icon" type="image/x-icon" href="../Favicon.png">
-    <link rel="stylesheet" href="../../styles.css"/>
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YZG2YDGNFN"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-YZG2YDGNFN');
-    gtag('config', 'AW-11234376367');
-    </script>
-
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5114036939976193"
-        crossorigin="anonymous">
-    </script>
-
-    <!-- <style>
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-            padding: 12px 16px;
-            z-index: 1;
-        }
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-        .dropdown-content a {
-            color: black;
-            padding: 6px 0;
-            text-decoration: none;
-            display: block;
-        }
-
-        .dropdown-content a:hover {
-            background-color: #ddd;
-        }
-    </style> -->
-
-</head>
+    <head>
+        <script src="/head.js" defer></script>
+    </head>
 
 <body>
     <div class="containter">  
