--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/bf66d40c1470575f392ed5d8/script.js"></script>
     <script src="/head.js" defer></script>
 </head>
 
