--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="testi_col">
                         <br><br>
                         <h3 class="testi_words">
-                            "Very professinal and thorough. Was able to add value right from the first introductory meeting. Would definitely recommend."
+                            "Very professional and thorough. Was able to add value right from the first introductory meeting. Would definitely recommend."
                         </h3>
                         <div class="star_and_name">
                             <img class="five_stars" src="images/5_stars_testimon.png" alt="5 Star Review">
