--- a/exercises/exercises.html
+++ b/exercises/exercises.html
@@ -207,8 +207,60 @@
                 <script>
                     // Array of question booklet URLs
                     const booklets = [
-    "../../documents/Q&A/safe_working_practices_exercises/Adopting_safe_working_practices_Q&A.pdf"
+    "../../documents/Q&A/safe_working_practices_exercises/Adopting_safe_working_practices_Q&A.pdf",
+    "../../documents/Q&A/current_legislation_exercises/Consumer_Rights_act.pdf",
+    "../../documents/Q&A/current_legislation_exercises/Consumer_rights_legislation_Q&A.pdf",
+    "../../documents/Q&A/current_legislation_exercises/Health_and_safety_Q&A.pdf",
+    "../../documents/Q&A/design_for_maintenance_and_cleaner_environment_exercises/products_life_cycle_Q&A.pdf",
+    "../../documents/Q&A/design_for_maintenance_and_cleaner_environment_exercises/Wider_issues_of_using_cleaner_technology_Q&A.pdf",
+    "../../documents/Q&A/digital_tech_exercises/Computer_aided_design_Q&A.pdf",
+    "../../documents/Q&A/digital_tech_exercises/Computer_aided_manufacture_Q&A.pdf",
+    "../../documents/Q&A/effects_of_tech_dev_exercises/Effects_tech_developements_Q&A.pdf",
+    "../../documents/Q&A/factors_influencing_development_of_products_exercises/Design_influence_methods_figures_Q&A.pdf",
+    "../../documents/Q&A/factors_influencing_development_of_products_exercises/Influence_of_aesthetics_Q&A.pdf",
+    "../../documents/Q&A/factors_influencing_development_of_products_exercises/Influence_on_design_of_anthropometrics_and_ergonomics_Q&A.pdf",
+    "../../documents/Q&A/factors_influencing_development_of_products_exercises/User_centred_design_Q&A.pdf",
+    "../../documents/Q&A/features_of_manufacturing_industries/Methods_of_production_Q&A.pdf",
+    "../../documents/Q&A/features_of_manufacturing_industries/Modern_manufacturing_methods_and_systems_Q&A.pdf",
+    "../../documents/Q&A/features_of_manufacturing_industries/Quality_Monitoring_Systems_Q&A.pdf",
+    "../../documents/Q&A/further_processes_techniques_exercises/Project_management_Q&A.pdf",
+    "../../documents/Q&A/further_processes_techniques_exercises/Stages_of_products_life_cycle_Q&A.pdf",
+    "../../documents/Q&A/further_processes_techniques_exercises/Strategies_techniques_and_approaches_to_explore_and_create_design_idea_Q&A.pdf",
+    "../../documents/Q&A/information_handling_planning_exercises/Explore_create_and_evaluate_design_ideas_Q&A.pdf",
+    "../../documents/Q&A/information_handling_planning_exercises/Intellectual_Property_rights_Q&A.pdf",
+    "../../documents/Q&A/information_handling_planning_exercises/modelling_the_costing_of_projects_Q&A.pdf",
+    "../../documents/Q&A/information_handling_planning_exercises/Standards_of_products_Q&A.pdf",
+    "../../documents/Q&A/Materials/Composites_Q&A.pdf",
+    "../../documents/Q&A/Materials/Metals_Q&A.pdf",
+    "../../documents/Q&A/Materials/Modern_materials_Q&A.pdf",
+    "../../documents/Q&A/Materials/papers_and_boards_Q&A.pdf",
+    "../../documents/Q&A/Materials/Polymers_Q&A.pdf",
+    "../../documents/Q&A/Materials/smart_materials_Q&A.pdf",
+    "../../documents/Q&A/Materials/Textiles_Q&A.pdf",
+    "../../documents/Q&A/Materials/Woods_Q&A.pdf",
+    "../../documents/Q&A/maths_exercises/DT_Maths_Coords&Geometry_Q&A.pdf",
+    "../../documents/Q&A/maths_exercises/DT_Maths_Graphs&Charts_Q&A.pdf",
+    "../../documents/Q&A/maths_exercises/DT_Maths_Number_Q&A.pdf",
+    "../../documents/Q&A/maths_exercises/DT_Maths_Ratio_Q&A.pdf",
+    "../../documents/Q&A/maths_exercises/DT_Maths_SA&Volume_Q&A.pdf",
+    "../../documents/Q&A/maths_exercises/DT_Maths_Stats_Q&A.pdf",
+    "../../documents/Q&A/maths_exercises/DT_Maths_Trig_Q&A.pdf",
+    "../../documents/Q&A/pcom_exercises/Performance_characteristics_of_materials_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Alloying_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Casting_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Design_decisions_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Finishing_techniques_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Heat_treatments_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Joining_techniques_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Lamination_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Machining_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Marking_out_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Moulding_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Printing_Q&A.pdf",
+    "../../documents/Q&A/processes_techniques_special_tools_exercises/Specialist_marking_tools_Q&A.pdf"
 ];
+
+
 
 
 
