--- a/exercises/exercises.html
+++ b/exercises/exercises.html
@@ -203,6 +203,17 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="background-image:url(../images/random_questions.jpg)"></div>
+                    <div class="img-text-wrapper">
+                        <div class="blurbox">
+                            <a href="exercise_topics/multiple_choice_questions.html">Random Multiple Choice Questions</a>
+                            <!-- <a href="Notes\MathematicsForD&T.html">Mathematics for D&T</a> -->
+                        </div>
+                    </div>
+                </div>
+                
                 
                 <script>
                     // Array of question booklet URLs
