--- a/exercises/exercises.html
+++ b/exercises/exercises.html
@@ -199,7 +199,7 @@
                     <div class="portfolio-img-background" style="background-image:url(../images/random_questions.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
-                            <a href="#" onclick="redirectToRandomBooklet()">Random questions</a>
+                            <a href="#" onclick="redirectToRandomBooklet()">Random Questions</a>
                         </div>
                     </div>
                 </div>
