--- a/notes/notes.html
+++ b/notes/notes.html
@@ -214,6 +214,7 @@
             background-color: whitesmoke;
         }
     </style>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../script.js"></script>
 </html>
