--- a/exercises/exercise_topics/AdoptingSafeWorkingPractices.html
+++ b/exercises/exercise_topics/AdoptingSafeWorkingPractices.html
@@ -78,6 +78,7 @@
         </div>
         
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
