--- a/exercises/exercise_topics/CurrentLegislation.html
+++ b/exercises/exercise_topics/CurrentLegislation.html
@@ -88,6 +88,7 @@
 
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
