--- a/exercises/exercise_topics/DigitalTechnologies.html
+++ b/exercises/exercise_topics/DigitalTechnologies.html
@@ -86,6 +86,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
