--- a/exercises/exercise_topics/FurtherProcessesAndTechniques.html
+++ b/exercises/exercise_topics/FurtherProcessesAndTechniques.html
@@ -96,6 +96,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
