--- a/exercises/exercise_topics/PerformanceCharacteristicsOfMaterialsNotes.html
+++ b/exercises/exercise_topics/PerformanceCharacteristicsOfMaterialsNotes.html
@@ -77,6 +77,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
