--- a/exercises/exercise_topics/multiple_choice_questions.html
+++ b/exercises/exercise_topics/multiple_choice_questions.html
@@ -151,5 +151,6 @@
             </div>
         </div>
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 </html>
