--- a/notes/notes_topics/AdoptingSafeWorkingPractices.html
+++ b/notes/notes_topics/AdoptingSafeWorkingPractices.html
@@ -75,6 +75,7 @@
             </div>
         </div>
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
