--- a/notes/notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
+++ b/notes/notes_topics/DesigningForMaintenanceAndTheCleanerEnvironment.html
@@ -85,6 +85,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
