--- a/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -102,6 +102,7 @@
             </div>
         </div>
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
