--- a/notes/notes_topics/PerformanceCharacteristicsOfMaterialsNotes.html
+++ b/notes/notes_topics/PerformanceCharacteristicsOfMaterialsNotes.html
@@ -76,6 +76,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../script.js"></script>
 </html>
