--- a/notes/notes_topics/notes_pages/CAD_notes.html
+++ b/notes/notes_topics/notes_pages/CAD_notes.html
@@ -205,6 +205,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../../script.js"></script>
 </html>
