--- a/notes/notes_topics/notes_pages/composites_materials_notes.html
+++ b/notes/notes_topics/notes_pages/composites_materials_notes.html
@@ -292,6 +292,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../../script.js"></script>
 </html>
