--- a/notes/notes_topics/notes_pages/influence_of_aesthetics_notes.html
+++ b/notes/notes_topics/notes_pages/influence_of_aesthetics_notes.html
@@ -103,6 +103,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../../script.js"></script>
 </html>
