--- a/notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -792,6 +792,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../../script.js"></script>
 </html>
