--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -380,6 +380,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../../script.js"></script>
 </html>
