--- a/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
+++ b/notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
@@ -213,6 +213,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../../script.js"></script>
 </html>
