--- a/notes/notes_topics/notes_pages/woods_materials_notes.html
+++ b/notes/notes_topics/notes_pages/woods_materials_notes.html
@@ -477,6 +477,7 @@
         </div>
 
     </div>
+    <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
 <script src="../../../script.js"></script>
 </html>
