--- a/tutoring.html
+++ b/tutoring.html
@@ -125,7 +125,7 @@
                     | &copy; DTBase.com | Designed by Henry Chen and Will Stevens | <br><br>| <div class="tutor_btn"><a href="legal_notice.html">Legal Notice & Privacy Policy</a> | </div>
                 </div>
             </div>
-        
+            <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
     </body>
     <script src="script.js"></script>
 </html>
