--- a/pastpapers/pastpapers.html
+++ b/pastpapers/pastpapers.html
@@ -46,6 +46,7 @@
                 <div class="nav-link-wrapper">
                     <a href="../contact.html">Contact</a>
                 </div>
+                <div class="nav-link-wrapper"><a href="../about.html">About Us</a></div>
                 
             </div>
         </header>
