--- a/about.html
+++ b/about.html
@@ -115,14 +115,7 @@
             <p>We’re always looking to expand our resources and improve our content. If you have suggestions or feedback, don’t hesitate to <a href="contact.html">reach out</a>!</p>
         </div>
 
-        <div class="footer">
-            <div class="footer-content">
-                <p><strong>Email: designtechbase@gmail.com | DTBase</strong></p>
-            </div>
-            <div class="footer-bottom">
-                | &copy; DTBase.com | Designed by Henry Chen and Will Stevens | <br><br>| <div class="tutor_btn"><a href="legal_notice.html">Legal Notice & Privacy Policy</a> | </div>
-            </div>
-        </div>
+        <script src="../footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
