Dynamic footer pt2

--- a/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -156,14 +156,7 @@ q
             </div>
         </div>
 
-        <div class="footer">
-            <div class="footer-content">
-               <p><strong> Email: designtechbase@gmail.com | DTBase</strong></p>
-            </div>
-            <div class="footer-bottom">
-                | &copy; DTBase.com | Designed by Henry Chen and Will Stevens | <br><br>| <div class="tutor_btn"><a href="../../../legal_notice.html">Legal Notice & Privacy Policy</a> | </div>
-            </div>
-        </div>
+        <script src="../../../footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
