--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/performance_characteristics_of_materials_notes.html
@@ -6,53 +6,8 @@
 
 <body>
     <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/matnotecharacteristics.jpg)" title="performance of materials background">
+            <div class="notes-content-header" style="background-image:url(/images/matnotecharacteristics.jpg)" title="performance of materials background">
                 <h1 style="color:white"><u><b>Performance Characteristics Of Materials</b></u></h1>
             </div>
 
@@ -73,19 +28,19 @@ q
                 <h3 id="Electricalconductivity"><b><u>Electrical conductivity:</b></u></h3>
                 <h3>The Property that lets <b style="color: rgb(185, 22, 22)">electrical current flow</b> through a material<br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Thermalconductivity"><b><u>Thermal conductivity:</b></u></h3>
                 <h3>The Property that lets <b style="color: rgb(185, 22, 22)">thermal energy flow</b> through a material<br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcom_conductivity.jpg" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Biodegradability"><b><u>Biodegradability:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">break down over time</b> as a result of <b style="color: rgb(185, 22, 22)">biological activity</b> (being broken down by <b style="color: rgb(185, 22, 22)">microorganisms</b>)<br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_biodegradability.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Chemicalresistance"><b><u>Chemical resistance:</b></u></h3>
@@ -103,63 +58,63 @@ q
                 <h3 id="Strength"><b><u>Strength (Tensile, Compressive, Torsional, Shear, Bending):</b></u></h3>
                 <h3>The ability allowing a material to <b style="color: rgb(185, 22, 22)">resist forces</b> from all directions <b style="color: rgb(185, 22, 22)">(compressive, tensile, bending, shear, torsional).</b> <br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_strength.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_strength.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Elasticity"><b><u>Elasticity:</b></u></h3>
                 <h3> The ability allowing an object or material to <b style="color: rgb(185, 22, 22)">reassume its normal shape</b> after being <b style="color: rgb(185, 22, 22)">stretched or compressed.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_elasticity.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_elasticity.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Placticity"><b><u>Placticity:</b></u></h3>
                 <h3> A material's ability to be <b style="color: rgb(185, 22, 22)">permanently deformed</b> and <b style="color: rgb(185, 22, 22)">retain</b> its deformed shape<br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_placticity.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_placticity.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Malleability"><b><u>Malleability:</b></u></h3>
                 <h3>A materia's ability to be <b style="color: rgb(185, 22, 22)">deformed by compression without being torn / cracked.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_malleability.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_malleability.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Ductility"><b><u>Ductility:</b></u></h3>
                 <h3>The ability of a material to be <b style="color: rgb(185, 22, 22)">drawn/stretched out thin</b> (usually into <b style="color: rgb(185, 22, 22)">wires</b>)<br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_ductility.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_ductility.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Hardness"><b><u>Hardness:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand indentation / abrasion / scratching.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_hardness.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_hardness.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Toughness"><b><u>Toughness:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">absorb impact force without fracture.</b><br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_toughness.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_toughness.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3 id="Durability"><b><u>Durability:</b></u></h3>
                 <h3>A material's ability to <b style="color: rgb(185, 22, 22)">withstand wear, pressure, and damage.</b> <br><br><br></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/pcom_images/pcm_durability.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/pcom_images/pcm_durability.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="..\..\..\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
+                    <a href="\documents\Q&A\pcom_exercises\Performance_characteristics_of_materials_Q&A.pdf">Performance Characteristics of Materials Questions</a>
                 </div>
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
