--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/specialist_marking_tools_notes.html
@@ -6,53 +6,8 @@
 
 <body>
     <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_marking_tools.jpg)" title="alloy background">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_marking_tools.jpg)" title="alloy background">
                 <h1 style="color:white"><u><b>Specialist marking tools</b></u></h1>
             </div>
 
@@ -65,7 +20,7 @@
                         <li>Used to mark/dent a piece of timber parallel to the edge</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/mortisegauge.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/mortisegauge.png" alt="Diagram of shape dimensions">
                     </div>
 
                     <h3 id="OddLegCalipers"><b><u>Odd leg callipers:</b></u></h3>
@@ -73,7 +28,7 @@
                         <li>Used to mark a line on an edge/step on a peice of metal</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/oddlegcaliper.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/oddlegcaliper.png" alt="Diagram of shape dimensions">
                     </div>
 
                     <h3 id="InternalCalipers"><b><u>Internal callipers:</b></u></h3>
@@ -86,7 +41,7 @@
                         <li>Used to measure the outsude diameter of a tube/pole</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/calipers.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/calipers.png" alt="Diagram of shape dimensions">
                     </div>
 
                     <h3 id="TrySquare"><b><u>Try-square:</b></u></h3>
@@ -99,7 +54,7 @@
                         <li>Used to mark a line 90<sup>o</sup> to a piece of metal</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/squares.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/squares.png" alt="Diagram of shape dimensions">
                     </div>
 
                     <h3 id="Micrometer"><b><u>Micrometre:</b></u></h3>
@@ -107,7 +62,7 @@
                         <li>Used to measure a small distance/thickness between its tqo faces, one face can be moved to measure different distances</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/micrometre.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/micrometre.png" alt="Diagram of shape dimensions">
                     </div>
 
                     <h3 id="VernierCalipers"><b><u>Vernier callipers:</b></u></h3>
@@ -115,7 +70,7 @@
                         <li>Used to measure internal/external measurements very orecisely</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/verniercalliper.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/verniercalliper.png" alt="Diagram of shape dimensions">
                     </div>
 
 
@@ -129,7 +84,7 @@
                         <li>Used to mark circles/curves on a piece of metal</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/dividers.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/dividers.png" alt="Diagram of shape dimensions">
                     </div>
 
                     <h3 id="Jigs"><b><u>Jigs:</b></u></h3>
@@ -188,7 +143,7 @@
                         <li>A go-no-go gauge is a tool used to check a piece of work is the correct size against its allowable tolerance</li>
                     </ul></h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/gonogo.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/gonogo.png" alt="Diagram of shape dimensions">
                     </div>
 
                     <div class="notes-content-subheader">
@@ -198,16 +153,16 @@
                     <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Specialist_marking_tools_Q&A.pdf">Specialist Marking Tools Questions</a>
+                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Specialist_marking_tools_Q&A.pdf">Specialist Marking Tools Questions</a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
