--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/alloying_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/alloying_notes.html
@@ -9,7 +9,7 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_alloy.jpg)" title="alloy background">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_alloy.jpg)" title="alloy background">
                 <h1 style="color:white"><u><b>Alloying</b></u></h1>
             </div>
 
@@ -66,7 +66,7 @@
                     <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Alloying_Q&A.pdf">Alloying Questions</a>
+                        <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Alloying_Q&A.pdf">Alloying Questions</a>
                     </div>
                 
                 <!-- <div class="download-page">
@@ -77,10 +77,10 @@
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
