--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/design_decisions_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/design_decisions_notes.html
@@ -5,54 +5,9 @@
     </head>
 
 <body>
-    <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
+    <div class="containter"> 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_design_decisions.jpg)" title="metal background">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_design_decisions.jpg)" title="metal background">
                 <h1 style="color:white"><u><b>Use of media to inform design decisions</b></u></h1>
             </div>
 
@@ -109,17 +64,17 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Design_decisions_Q&A.pdf">Design Decisions Questions</a>
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Design_decisions_Q&A.pdf">Design Decisions Questions</a>
                 </div>
             </div>
 
 
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
