--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/finishing_techniques_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/finishing_techniques_notes.html
@@ -6,53 +6,8 @@
 
 <body>
     <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_finishing.jpg)" title="casting background">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_finishing.jpg)" title="casting background">
                 <h1 style="color:white"><u><b>Finishing techniques</b></u></h1>
             </div>
 
@@ -203,7 +158,7 @@
 
                 <h3 id="Electro-Plating"><b><u>Electro-plating:</b></u></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/electroplating.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/electroplating.png" alt="Diagram of shape dimensions">
                 </div>
                 <h3>
 
@@ -433,7 +388,7 @@
                 <h3>
 
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/hotfoilblocking.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/hotfoilblocking.png" alt="Diagram of shape dimensions">
                     </div>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -469,7 +424,7 @@
                 <h3>
 
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/embossing.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/embossing.png" alt="Diagram of shape dimensions">
                     </div>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -501,17 +456,17 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Finishing_techniques_Q&A.pdf">Finishing Techniques Questions</a>
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Finishing_techniques_Q&A.pdf">Finishing Techniques Questions</a>
                 </div>            
 
                 
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
