--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/health_and_safety_laws_notes.html
@@ -5,52 +5,7 @@
     </head>
 
 <body>
-    <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
+    <div class="containter">
         <div class="notes-content-wrapper">
             <div class="notes-content-header" style="background-image:url(../../../images/healthandsafetylaws.jpg)" title="casting background">
                 <h1 style="color:rgb(254, 249, 249)"><u><b>Health & Safety laws, regulations and impacts on the designing and making process</b></u></h1>
@@ -174,7 +129,7 @@
                 <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\current_legislation_exercises\Health_and_safety_Q&A.pdf">Health and Safety Laws</a>
+                        <a href="\documents\Q&A\current_legislation_exercises\Health_and_safety_Q&A.pdf">Health and Safety Laws</a>
                     </div>
 
 
@@ -184,10 +139,10 @@
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
