--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/joining_techniques_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/joining_techniques_notes.html
@@ -6,53 +6,8 @@
 
 <body>
     <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_joining.jpg); opacity:  0.8;" title="casting background">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_joining.jpg); opacity:  0.8;" title="casting background">
                 <div class="overlay"></div>
                 <h1 style="color:rgb(0, 0, 0);"><u><b>Joining Techniques</b></u></h1>
             </div>
@@ -388,7 +343,7 @@
                 </div>
                 <h3 id="OxyAcetyleneWelding"><b><u></u>Oxy acetylene welding:</b></h3>
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/oxy.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/oxy.png" alt="Diagram of shape dimensions">
                 </div>
                 <p><b>How it works:</b></p>
                     <ul>
@@ -425,7 +380,7 @@
                 <h3 id="MIGWelding"><b><u></u>MIG welding:</b></h3>
 
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/mig.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/mig.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <p><b>How it works:</b></p>
@@ -461,7 +416,7 @@
                 <h3 id="Brazing"><b><u></u>Brazing:</b></h3>
 
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/brazing.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/brazing.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <p><b>How it works:</b></p>
@@ -499,7 +454,7 @@
                 <h3 id="HardSoldering"><b><u></u>Hard soldering:</b></h3>
 
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/hard_soldering.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/hard_soldering.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <p><b>How it works:</b></p>
@@ -535,7 +490,7 @@
                 <h3 id="SoftSoldering"><b><u></u>Soft soldering:</b></h3>
 
                 <div class="notes-content-picture" >
-                    <img src="../../../images/notes_pages_images/soldering.png" alt="Diagram of shape dimensions">
+                    <img src="/images/notes_pages_images/soldering.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <p><b>How it works:</b></p>
@@ -775,7 +730,7 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Joining_techniques_Q&A.pdf">Joining Techniques Questions</a>
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Joining_techniques_Q&A.pdf">Joining Techniques Questions</a>
                 </div> 
 
                 
@@ -783,10 +738,10 @@
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
