--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/printing_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/printing_notes.html
@@ -5,54 +5,9 @@
     </head>
 
 <body>
-    <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
+    <div class="containter"> 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/PTST/PTST_note_printing.jpg)" title="printing background">
+            <div class="notes-content-header" style="background-image:url(/images/PTST/PTST_note_printing.jpg)" title="printing background">
                 <h1 style="color:white"><u><b>Printing</b></u></h1>
             </div>
 
@@ -70,7 +25,7 @@
                 <h3 id="OffsetLithography"><b><u>Offset lithography:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/offsetlithography.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/offsetlithography.png" alt="Diagram of shape dimensions">
                     </div>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -108,7 +63,7 @@
                 <h3 id="Flexography"><b><u>Flexography:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/flexography.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/flexography.png" alt="Diagram of shape dimensions">
                     </div>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -147,7 +102,7 @@
                 <h3 id="ScreenPrinting"><b><u>Screen printing:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/screenprinting.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/screenprinting.png" alt="Diagram of shape dimensions">
                     </div>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -187,7 +142,7 @@
                 <h3 id="GravurePrinting"><b><u>Gravure printing:</b></u></h3>
                 <h3>
                     <div class="notes-content-picture" >
-                        <img src="../../../images/notes_pages_images/gravure.png" alt="Diagram of shape dimensions">
+                        <img src="/images/notes_pages_images/gravure.png" alt="Diagram of shape dimensions">
                     </div>
                     <p><b>How it works:</b></p>
                     <ul>
@@ -224,15 +179,15 @@
                 <h3><b>Topic test:</b></h3>
 
                 <div class="blurbox" style="background-color: #bdbdbd;">
-                    <a href="..\..\..\documents\Q&A\processes_techniques_special_tools_exercises\Printing_Q&A.pdf">Printing Questions</a>
+                    <a href="\documents\Q&A\processes_techniques_special_tools_exercises\Printing_Q&A.pdf">Printing Questions</a>
                 </div> 
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
