--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/sta_to_explore_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/sta_to_explore_notes.html
@@ -6,53 +6,8 @@
 
 <body>
     <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/createEvaluateDesignIdea.jpg)" title="alloy background">
+            <div class="notes-content-header" style="background-image:url(/images/createEvaluateDesignIdea.jpg)" title="alloy background">
                 <h1 style="color: white"><u><b>Strategies, techniques and approaches to explore, create and evaluate design ideas</b></u></h1>
             </div>
 
@@ -155,7 +110,7 @@
                     <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\further_processes_techniques_exercises\Strategies_techniques_and_approaches_to_explore_and_create_design_idea_Q&A.pdf">Strategies Techniques and Approaches to Explore, Create and Evaluate Design Ideas Questions</a>
+                        <a href="\documents\Q&A\further_processes_techniques_exercises\Strategies_techniques_and_approaches_to_explore_and_create_design_idea_Q&A.pdf">Strategies Techniques and Approaches to Explore, Create and Evaluate Design Ideas Questions</a>
                     </div>
                     
 
@@ -166,10 +121,10 @@
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
