--- a/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
+++ b/notes/notes_level/notes_examboard/edexcel_alevel_notes/notes_topics/notes_pages/stages_of_a_products_life_cycle_notes.html
@@ -6,53 +6,8 @@
 
 <body>
     <div class="containter">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../../../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../pastpapers/pastpapers.html">Past papers</a>
-                </div>   
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../../../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../../../about.html">About Us</a></div>
-                
-            </div>
-        </header>
-
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/stagesOfProductLifecycle.jpg)" title="casting background">
+            <div class="notes-content-header" style="background-image:url(/images/stagesOfProductLifecycle.jpg)" title="casting background">
                 <h1 style="color:rgb(254, 249, 249)"><u><b>Stages of a products life cycle</b></u></h1>
             </div>
 
@@ -114,7 +69,7 @@
                 </div>
 
                 <div class="notes-content-picture" >
-                    <img src="../../../images/productlifecycle-2.png" alt="Diagram of shape dimensions">
+                    <img src="/images/productlifecycle-2.png" alt="Diagram of shape dimensions">
                 </div>
 
                 <div class="notes-content-subheader">
@@ -124,7 +79,7 @@
                 <h3><b>Topic test:</b></h3>
 
                     <div class="blurbox" style="background-color: #bdbdbd;">
-                        <a href="..\..\..\documents\Q&A\further_processes_techniques_exercises\Stages_of_products_life_cycle_Q&A.pdf">Stages of a Products Life Cycle Questions</a>
+                        <a href="\documents\Q&A\further_processes_techniques_exercises\Stages_of_products_life_cycle_Q&A.pdf">Stages of a Products Life Cycle Questions</a>
                     </div>
                 
 
@@ -135,10 +90,10 @@
             </div>
         </div>
 
-        <script src="../../../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
