--- a/notes/notes_level/notes_alevel_examboard.html
+++ b/notes/notes_level/notes_alevel_examboard.html
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        <script src="../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
 
@@ -62,5 +62,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../script.js"></script>
+<script src="/script.js"></script>
 </html>
