--- a/notes/notes_level/notes_gcse_examboard.html
+++ b/notes/notes_level/notes_gcse_examboard.html
@@ -6,52 +6,6 @@
 
 <body style="background-color: rgb(255, 255, 255);">
     <div class="containter" style="background-color: rgb(255, 255, 255);">  
-        <header>
-            <div class="Logo">
-                <img class="logo" src="../images/Logo.png"  alt="DesignandTechBase Logo">
-            </div>
-            <div class="toggle"></div>
-            <div class="navigation">
-
-                <a href="#" class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </a>
-
-                <div class="nav-link-wrapper">
-                    <a href="../index.html">Home</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../tutoring.html">Tutoring</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="notes.html">Notes</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../exercises/exercises.html">Questions</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../pastpapers/pastpapers.html">Past Papers</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../coursework/coursework.html">Coursework</a>
-                </div>
-
-                <div class="nav-link-wrapper">
-                    <a href="../contact.html">Contact</a>
-                </div>
-                <div class="nav-link-wrapper"><a href="../about.html">About Us</a></div>
-                
-            </div>
-            
-
-        </header>
         <div class="quote" margin-top style="background-color: rgb(255, 255, 255);">
             <h2>Free handmade revision notes tailored for GCSE and A Level Design and Technology</h2>
         </div>
@@ -67,7 +21,7 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../images/portfolio1.jpg)" title="A bunch of materials"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio1.jpg)" title="A bunch of materials"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
@@ -77,7 +31,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../images/portfolio2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
@@ -87,7 +41,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
@@ -98,7 +52,7 @@
             </div>
         </div>
 
-        <script src="../footer.js"></script>
+        <script src="/footer.js"></script>
 
     </div>
 
@@ -109,5 +63,5 @@
     </style>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../script.js"></script>
+<script src="/script.js"></script>
 </html>
