--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes.html
@@ -21,17 +21,17 @@
             <div class="portfolio-items-wrapper">
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio1.jpg)" title="A bunch of materials"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio1.jpg)" title="A bunch of materials"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/materialsnotes.html">Materials</a> -->
-                            <a href="">Materials and their applications</a>
+                            <a href="aqa_technical_principles_alevel_notes_topics/materials_and_their_applications.html">Materials and their applications</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio2.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio2.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes/PerformanceCharacteristicsOfMaterialsNotes.html">Performance Characteristics Of Materials</a> -->
@@ -41,7 +41,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio3.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio3.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\ProcessesTechniquesAndSpecialistTools.html">Processes Techniques and Specialist Tools</a> -->
@@ -51,7 +51,7 @@
                 </div>
 
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="background-image:url(../../../../../images/portfolio4.jpg)"></div>
+                    <div class="portfolio-img-background" style="background-image:url(/images/portfolio4.jpg)"></div>
                     <div class="img-text-wrapper">
                         <div class="blurbox">
                             <!-- <a href="Notes\DigitalTechnologies.html">Digital Technologies</a> -->
