--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/digital_design_and_manufacture.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/digital_design_and_manufacture.html
@@ -7,34 +7,67 @@
 <body>
     <div class="containter"> 
         <div class="quote">
-            <h2>Safe Working Practices</h2>
+            <h2>Digital design and manufacture</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/aqa_cad_notes.html">Computer aided design (CAD)</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_cam_notes.html">Computer aided manufacture (CAM)
+                            </a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_virtual_modelling_notes.html">Virtual modelling
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\aqa_rapid_prototyping_processes_notes.html">Rapid prototyping processes
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\electronic_data_interchange_notes.html">Electronic data interchange
+
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages\ppc_networking_notes.html">Production, planning and control (PPC) networking
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -42,9 +75,9 @@
             </div>
         </div>
 
-        <script src="../../../../../../../footer.js"></script>
+        <script src="/footer.js"></script>
     </div>
     <button id="scrollToTopBtn" onclick="scrollToTop()">↑ Scroll To Top</button>
 </body>
-<script src="../../../../../../../script.js"></script>
+<script src="/script.js"></script>
 </html>
