--- a/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/modern_industrial_and_commerical_practice.html
+++ b/notes/notes_level/notes_examboard/aqa_alevel_notes/technical_principles/aqa_technical_principles_alevel_notes_topics/modern_industrial_and_commerical_practice.html
@@ -7,34 +7,45 @@
 <body>
     <div class="containter"> 
         <div class="quote">
-            <h2>Safe Working Practices</h2>
+            <h2>Modern industrial and commercial practice</h2>
         </div>
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper-notes_single">
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="aqa_technical_principles_alevel_notes_pages/materials_and_their_applications_notes.html">Materials and their applications</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/scale_of_production_notes.html">Scales of production
+                            </a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Classification of materials</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/efficient_use_of_materials_notes.html">Efficient use of materials</a>
                         </div>
                     </div>
                 </div>
 
                 <div class="portfolio-item-wrapper-notes">
-                    <div class="portfolio-img-background-notes" style="background-image:url(../../../../../../../images/safeWorkingPractice.jpg)"></div>
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\safe_working_notes.html">Methods for investigating and testing materials</a>
+                            <a href="aqa_technical_principles_alevel_notes_pages/the_use_of_computer_systems_notes.html">The use of computer systems
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(/images/.jpg)"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="aqa_technical_principles_alevel_notes_pages/sub_assemly_notes.html">Sub-assembly</a>
                         </div>
                     </div>
                 </div>
